--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Myportfolio</title>
+    <title>Portfolio Eva Stolz</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,500,700" rel="stylesheet">
     
@@ -12,6 +12,38 @@
   </head>
 
   <body>
+
+    <div class="header"> 
+      <div class="container"> 
+        <div class="row align-items-center"> 
+          <div class="menu col-8"> 
+            <ul> 
+              <li><a href="/">Welcome</a></li> 
+              <li><a href="portfolio">Portfolio</a></li> 
+              <li><a href="https://medium.com/about-codecademy">Blog</a></li>
+              <li><a href="about">About</a></li> 
+              <li><a href="contact">Contact</a></li> 
+            </ul> 
+          </div> 
+          <div class="name col-4"> 
+            <h1>Eva Stolz</h1> 
+          </div> 
+        </div> 
+      </div> 
+    </div>
+
     <%= yield %>
+
+    <div class="footer"> 
+      <div class="container"> 
+        <ul class="social_media"> 
+          <li><a class="github" href="#"></a></li> 
+          <li><a class="linkedin" href="#"></a></li> 
+          <li><a class="xing" href="#"></a></li> 
+        </ul> 
+        <p>© 2018 Eva Stolz</p> 
+      </div> 
+    </div>
+    
   </body>
 </html>
