added image to About page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
     <div class="header"> 
       <div class="container"> 
-        <div class="row align-items-center"> 
+        <div class="row"> 
           <div class="menu col-8"> 
             <ul> 
               <li><a href="/">Welcome</a></li> 
@@ -37,13 +37,13 @@
     <div class="footer"> 
       <div class="container"> 
         <ul class="social_media"> 
-          <li><a class="github" href="#"></a></li> 
-          <li><a class="linkedin" href="#"></a></li> 
-          <li><a class="xing" href="#"></a></li> 
+          <li><a class="github" href="https://github.com/eva7180" target="_blank"></a></li> 
+          <li><a class="linkedin" href="https://www.linkedin.com/in/eva-stolz-1b6bb543/" target="_blank"></a></li> 
+          <li><a class="xing" href="https://www.xing.com/profile/Eva_Stolz2/cv?sc_o=mxb_p" target="_blank"></a></li> 
         </ul> 
         <p>© 2018 Eva Stolz</p> 
       </div> 
     </div>
-    
+
   </body>
 </html>
