--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 	<div class="container"> 
 		<div class="row"> 
 			<div class="col-md-6 thumbnail"> 
-				<img alt="Me" src=#>
+				<%= image_tag("eva_stolz.jpg", alt:"Me", class: "myimage") %>
 			</div> 
 			<div class="col-md-6"> 
 				<h2>Hello. My name is <span class="highlight">Eva Stolz</span></h2>
