worked on frontend

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -2,7 +2,7 @@
 <div class="main home"> 
 	<div class="jumbotron"> 
 		<div class="container"> 
-			<h2>Hello. My name is <span class="highlight">Eva Stolz</span> and I am learning to code.</h2> 
+			<h2>Hello. My name is <span class="highlight">Eva Stolz</span>. You can find out about me and my work here.</h2> 
 			<a class="btn right" href="portfolio">View my Work</a> 
 		</div> 
 	</div> 
