--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,12 +15,11 @@
  */
 @import "bootstrap";
 
-.container {
-	padding:0 100px 0 140px;
-	width:100%;
-}
-
 //--header
+
+.header {
+	padding: 20px 30px;
+}
 .menu ul {
 	list-style: none;
 	padding-left:0;
@@ -57,25 +56,22 @@
 	width:100%;
 }
 
-.main .container {
-	margin:80px 0;
+.home .container {
+	padding:100px 100px 0 160px;
 }
 
-.main h2 {
-	color:#000;
+.home h2 {
+	color:#fff;
 	font-size:48px;
 	line-height:56px;
 	text-align:right;
 }
 
-.home h2 {
-	color:#fff;
-}
-
 .highlight {
-	background-color:#eaeff4;
+	background-color: LightGrey;
 	color:#000;
-	padding:0 10px 0;
+	padding:0 20px 0;
+	font-weight: bold;
 }
 
 .home .jumbotron {
@@ -83,6 +79,7 @@
 	background-size:cover;
 	min-height:600px;
 	width:100%;
+	border-radius: 0;
 }
 
 a.btn {
@@ -109,11 +106,25 @@ a.btn:hover {
 	float:right;
 }
 
+.about .row {
+	min-height: 400px;
+}
+.about .container {
+	padding: 0;
+}
+
+.myimage {
+	background-image: url('eva_stolz.jpg');
+	background-color: LightGrey;
+	background-size: cover;
+	background-position: right top;
+}
+
 //--footer
 .footer {
 	background-color: #fff;
-	height:200px;
 	text-align:right;
+	padding: 0px 30px;
 	width:100%}
 
 .footer .social_media {
