--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,12 @@
   <body>
 
     <div class="header"> 
-      <div class="container"> 
+      <div class="container-fluid"> 
         <div class="row"> 
           <div class="menu col-8"> 
             <ul> 
               <li><a href="/">Welcome</a></li> 
-              <li><a href="portfolio">Portfolio</a></li> 
-              <li><a href="https://medium.com/about-codecademy">Blog</a></li>
+              <li><a href="portfolio">Portfolio</a></li>
               <li><a href="about">About</a></li> 
               <li><a href="contact">Contact</a></li> 
             </ul> 
@@ -35,7 +34,7 @@
     <%= yield %>
 
     <div class="footer"> 
-      <div class="container"> 
+      <div class="container-fluid"> 
         <ul class="social_media"> 
           <li><a class="github" href="https://github.com/eva7180" target="_blank"></a></li> 
           <li><a class="linkedin" href="https://www.linkedin.com/in/eva-stolz-1b6bb543/" target="_blank"></a></li> 
