--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,7 @@
 <div class="main about"> 
 	<div class="container"> 
 		<div class="row"> 
-			<div class="col-md-6 thumbnail"> 
-				<%= image_tag("eva_stolz.jpg", alt:"Me", class: "myimage") %>
+			<div class="col-md-6 thumbnail myimage">
 			</div> 
 			<div class="col-md-6"> 
 				<h2>Hello. My name is <span class="highlight">Eva Stolz</span></h2>
