--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,7 +114,7 @@ a.btn:hover {
 }
 
 .myimage {
-	background-image: url('eva_stolz.jpg');
+	background-image: url('portrait.jpg');
 	background-color: LightGrey;
 	background-size: cover;
 	background-position: right top;
