--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,7 @@
 .highlight {
 	background-color: LightGrey;
 	color:#000;
-	padding:0 20px 0;
+	padding:0 10px 0;
 	font-weight: bold;
 }
 
@@ -106,11 +106,17 @@ a.btn:hover {
 	float:right;
 }
 
-.about .row {
-	min-height: 400px;
-}
 .about .container {
 	padding: 0;
+	margin-left: 150px;
+	margin-right: 150px;
+	background-color: red;
+}
+
+.about .row {
+	min-height: 400px;
+	margin-left: 100px;
+	margin-right: 100px;
 }
 
 .myimage {
@@ -118,6 +124,11 @@ a.btn:hover {
 	background-color: LightGrey;
 	background-size: cover;
 	background-position: right top;
+}
+
+.aboutme {
+	text-align: right;
+	padding-left: 50px;
 }
 
 //--footer
