--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="main about"> 
-	<!-- <div class="container"> -->
+	<div class="container">
 		<div class="row"> 
 			<div class="col-md-6 thumbnail myimage">
 			</div> 
@@ -12,5 +12,5 @@
 				<p> After two years of self-study next to a full time job in sales, I decided to try for a career change and am currently enrolled in a full-time coding bootcamp. </p> 
 			</div> 
 		</div> 
-	<!-- </div> --> 
+	</div>
 </div>
