--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,13 +1,14 @@
 <div class="main contact"> 
 	<div class="container"> 
-		<h2>Contact me</h2> 
+		<h2>Contact me:</h2> 
 		<div class="row"> 
-			<div class="col-md-2"> <a class="linkedin" href="#">linkedin</a> </div> 
-			<div class="col-md-2"> <a class="github" href="#">github</a> </div>
-			<div class="col-md-2"> <a class="twitter" href="#">twitter</a> </div>
-			<div class="col-md-2"> <a class="facebook" href="#">facebook</a> </div>
-			<div class="col-md-2"> <a class="gplus" href="#">google plus</a> </div>
-			<div class="col-md-2"> <a class="instagram" href="#">instagram</a> </div> 
+			<div class="col-md-3"> <a class="email" href="mailto:eva.stolz@gmail.com"></a> </div>
+			<div class="col-md-3"> <a class="linkedin" href="https://www.linkedin.com/in/eva-stolz-1b6bb543/" target="_blank"></a> </div> 
+			<div class="col-md-3"> <a class="xing" href="https://www.xing.com/profile/Eva_Stolz2/cv?sc_o=mxb_p" target="_blank"></a> </div>
+			<div class="col-md-3"> <a class="github" href="https://github.com/eva7180" target="_blank"></a> </div>
+			
+			
+			
 		</div> 
 	</div> 
 </div>
