--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,16 +1,18 @@
 <div class="main about"> 
-	<div class="container">
-		<div class="row"> 
-			<div class="col-md-6 thumbnail myimage">
+	<div class="jumbotron">
+		<div class="container">
+			<div class="row"> 
+				<div class="col-md-6 thumbnail myimage">
+				</div> 
+				<div class="col-md-6 aboutme"> 
+					<h2>Hello.<br>My name is <span class="highlight">Eva Stolz</span>.</h2>
+					<p>I was born and grew up in southern Germany with my parents and two sisters and now live in Berlin.</p>
+					<p>I have a business degree and over 12 years experience working in a number of sales and account management roles in tourism and tech companies in France, Ireland and Germany. </p>
+					<p> Over the years, I discovered my interest in programming and eventually combined my passion for learning with experimenting in this field completely new to me. </p> 
+					<p>Since 2016, I've been pursuing my new passion, learning to code, building web apps and developing my creativity.</p>
+					<p> After two years of self-study next to a full time job in sales, I decided to try for a career change and am currently enrolled in a full-time coding bootcamp. </p> 
+				</div> 
 			</div> 
-			<div class="col-md-6 aboutme"> 
-				<h2>Hello.<br>My name is <span class="highlight">Eva Stolz</span>.</h2>
-				<p>I was born and grew up in southern Germany with my parents and two sisters and now live in Berlin.</p>
-				<p>I have a business degree and over 12 years experience working in a number of sales and account management roles in tourism and tech companies in France, Ireland and Germany. </p>
-				<p> Over the years, I discovered my interest in programming and eventually combined my passion for learning with experimenting in this field completely new to me. </p> 
-				<p>Since 2016, I've been pursuing my new passion, learning to code, building web apps and developing my creativity.</p>
-				<p> After two years of self-study next to a full time job in sales, I decided to try for a career change and am currently enrolled in a full-time coding bootcamp. </p> 
-			</div> 
-		</div> 
+		</div>
 	</div>
 </div>
