--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,14 +1,13 @@
 <div class="main contact"> 
-	<div class="container"> 
-		<h2>Contact me:</h2> 
-		<div class="row"> 
-			<div class="col-md-3"> <a class="email" href="mailto:eva.stolz@gmail.com"></a> </div>
-			<div class="col-md-3"> <a class="linkedin" href="https://www.linkedin.com/in/eva-stolz-1b6bb543/" target="_blank"></a> </div> 
-			<div class="col-md-3"> <a class="xing" href="https://www.xing.com/profile/Eva_Stolz2/cv?sc_o=mxb_p" target="_blank"></a> </div>
-			<div class="col-md-3"> <a class="github" href="https://github.com/eva7180" target="_blank"></a> </div>
-			
-			
-			
+	<div class="jumbotron">
+		<div class="container"> 
+			<h2>Contact me:</h2> 
+			<div class="row"> 
+				<div class="col-md-3"> <a class="email" href="mailto:eva.stolz@gmail.com"></a> </div>
+				<div class="col-md-3"> <a class="linkedin" href="https://www.linkedin.com/in/eva-stolz-1b6bb543/" target="_blank"></a> </div> 
+				<div class="col-md-3"> <a class="xing" href="https://www.xing.com/profile/Eva_Stolz2/cv?sc_o=mxb_p" target="_blank"></a> </div>
+				<div class="col-md-3"> <a class="github" href="https://github.com/eva7180" target="_blank"></a> </div>			
+			</div> 
 		</div> 
-	</div> 
+	</div>
 </div>
